Reference templates as html

--- a/templates/archives/archive_list.html
+++ b/templates/archives/archive_list.html
@@ -48,7 +48,7 @@
   {% endif %}
   {% block paginator %}
     {% if object_list.count %}
-      {% include "includes/pagination.haml" %}
+      {% include "includes/pagination.html" %}
     {% endif %}
   {% endblock paginator %}
 {% endblock content %}
