--- a/templates/channels/channellog_list.haml
+++ b/templates/channels/channellog_list.haml
@@ -16,7 +16,7 @@
 
 -block content
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-    -include "includes/short_pagination.haml"
+    -include "includes/short_pagination.html"
 
   .flex-grow.overflow-y-auto.shadow.bg-white.shadow
     -for obj in object_list
