--- a/templates/channels/channellog_msg.haml
+++ b/templates/channels/channellog_msg.haml
@@ -1,4 +1,4 @@
--extends "channels/channellog_owned_base.haml"
+-extends "channels/channellog_owned_base.html"
 -load i18n contacts
 
 -block spa-title
