--- a/templates/channels/channellog_owned_base.haml
+++ b/templates/channels/channellog_owned_base.haml
@@ -7,7 +7,7 @@
       -block group_object
   
   -for log in logs  
-    -include "channels/channellog.haml" with log=log
+    -include "channels/channellog.html" with log=log
 
 -block extra-script
   {{ block.super }}
