--- a/templates/flows/flow_filter.html
+++ b/templates/flows/flow_filter.html
@@ -19,6 +19,6 @@
 {% endblock above-bar %}
 {% block buttons-right %}
   {% block gear-menu %}
-    {% include "spa_page_menu.haml" %}
+    {% include "spa_page_menu.html" %}
   {% endblock gear-menu %}
 {% endblock buttons-right %}
