--- a/templates/flows/flow_list.html
+++ b/templates/flows/flow_list.html
@@ -21,7 +21,7 @@
         <input type="submit" class="hide">
       </form>
     {% endif %}
-    <div class="mt-4 shadow rounded-lg rounded-bl-none rounded-br-none bg-white">{% include "includes/short_pagination.haml" %}</div>
+    <div class="mt-4 shadow rounded-lg rounded-bl-none rounded-br-none bg-white">{% include "includes/short_pagination.html" %}</div>
     <div class="flex-grow overflow-y-auto shadow">
       <table class="relative list object-list lined selectable scrolled">
         {% if object_list %}
