--- a/templates/globals/global_list.haml
+++ b/templates/globals/global_list.haml
@@ -35,7 +35,7 @@
 
 
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-    -include "includes/short_pagination.haml"
+    -include "includes/short_pagination.html"
   .flex-grow.overflow-y-auto.shadow  
     %table.list.lined.scrolled{class:"{% if org_perms.contacts.contact_update %}selectable{%endif%}"}
       %tbody
