--- a/templates/msgs/broadcast_scheduled_delete.haml
+++ b/templates/msgs/broadcast_scheduled_delete.haml
@@ -1,4 +1,4 @@
--extends "smartmin/delete_confirm.haml"
+-extends "smartmin/delete_confirm.html"
 -load smartmin sms temba i18n humanize
 
 -block modal
