--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -28,7 +28,7 @@
 
 
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-    -include "includes/short_pagination.haml"          
+    -include "includes/short_pagination.html"          
   
   .flex-grow.overflow-y-auto.shadow.rounded-b-lg
     -if has_messages
