--- a/templates/msgs/msg_test_frame.haml
+++ b/templates/msgs/msg_test_frame.haml
@@ -29,7 +29,7 @@
 
               -block above-bar
                 -block gear-menu
-                  -include "spa_page_menu.haml"
+                  -include "spa_page_menu.html"
                 -block top-form
 
           %hr.top-bar
