--- a/templates/notifications/incident_list.haml
+++ b/templates/notifications/incident_list.haml
@@ -47,4 +47,4 @@
               %td(colspan='2')
                 -trans "None"
 
-      -include "includes/pagination.haml"
+      -include "includes/pagination.html"
