--- a/templates/smartmin/list.haml
+++ b/templates/smartmin/list.haml
@@ -19,7 +19,7 @@
       -block pre-table
       -block paginator
         .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-          -include "includes/short_pagination.haml"     
+          -include "includes/short_pagination.html"     
       -block table
         %table.list.lined
           %thead
