--- a/templates/triggers/trigger_create.haml
+++ b/templates/triggers/trigger_create.haml
@@ -8,4 +8,4 @@
     -trans "Triggers allow users to start flows based on user actions or schedules."
   
 -block content
-  -include "formax.haml"
+  -include "formax.html"
