--- a/templates/triggers/trigger_create_schedule.haml
+++ b/templates/triggers/trigger_create_schedule.haml
@@ -5,7 +5,7 @@
   -trans "Start a flow in the future or on a schedule."
 
 -block fields
-  -include 'includes/schedule_fields.haml' with form=form
+  -include 'includes/schedule_fields.html' with form=form
   -render_field 'flow'
   -render_field 'groups'
   -render_field 'contacts'
