--- a/templates/triggers/trigger_update.haml
+++ b/templates/triggers/trigger_update.haml
@@ -12,7 +12,7 @@
     -render_field "exclude_groups"
 
   -elif object.trigger_type == 'S'
-    -include 'includes/schedule_fields.haml' with form=form
+    -include 'includes/schedule_fields.html' with form=form
     -render_field 'flow'
     -render_field 'groups'
     -render_field 'exclude_groups'
