--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -101,7 +101,7 @@
   %temba-modax#create-group-modal(header='{% trans "Create Group" %}' endpoint="{% url 'contacts.contactgroup_create' %}" -temba-loaded="handleCreateGroupModalLoaded")
 
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
-    -include "includes/short_pagination.haml"
+    -include "includes/short_pagination.html"
     -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
       .text-gray-400.text-sm.self-end.mt-2
         -trans "To view more than 10,000 search results, save it as a group."
