--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -163,14 +163,14 @@
                         .h-0.border.border-gray-200
                       
                       -if has_content_menu
-                        -include "spa_page_menu.haml"
+                        -include "spa_page_menu.html"
                 
                     .text-lg.text-gray-600
                         -block subtitle
                       
               -block alert-messages
                 -if user_org.is_suspended
-                  -include "org_suspended_include.haml"
+                  -include "org_suspended_include.html"
                 -if messages
                   -for msg in messages
                     %temba-alert.mb-3
