--- a/templates/msgs/broadcast.html
+++ b/templates/msgs/broadcast.html
@@ -5,7 +5,7 @@
     <div class="broadcast-top-bar px-2 pt-2 pb-1 bg-gray-300 flex flex-row"
          style="--color-overlay-light:#fff;
                 --color-background-hover:transparent">
-      <div class="recipients flex-grow">{% include "includes/recipients.haml" with groups=object.groups.all contacts=object.contacts.all %}</div>
+      <div class="recipients flex-grow">{% include "includes/recipients.html" with groups=object.groups.all contacts=object.contacts.all %}</div>
       <div class="flex-grow text-right mr-2 text-sm self-center text-gray-600 font-normal -mt-1">
         {% if broadcast.schedule.next_fire %}
           {{ broadcast.schedule.next_fire|duration }}
