--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -14,7 +14,7 @@
               %span.glyph.icon-bullhorn.text-gray-500
             %td.value-recipient
               .pt-1.inline-block
-                -include "includes/recipients.haml" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.urns
+                -include "includes/recipients.html" with groups=broadcast.groups.all contacts=broadcast.contacts.all urns=broadcast.urns
 
             %td.w-full
               .flex.flex-wrap.flex-end.items-center.justify-end
@@ -34,7 +34,7 @@
         %tr
           %td.value-recipient(colspan="2")
             .pt-1.inline-block
-              -include "includes/recipients_contact.haml" with contact=object.contact
+              -include "includes/recipients_contact.html" with contact=object.contact
           %td.value-text.w-full
             {% get_value object 'text' %}
 
@@ -64,4 +64,4 @@
 -block paginator
   -if object_list.count
     .paginator
-      -include "smartmin/sidebar_pagination.haml"
+      -include "smartmin/sidebar_pagination.html"
