--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -33,7 +33,7 @@
           .h-0.border.border-gray-200
         
         -if has_content_menu
-          -include "spa_page_menu.haml"
+          -include "spa_page_menu.html"
 
       .text-lg.text-gray-600
         -block subtitle
@@ -44,7 +44,7 @@
 
 -block alert-messages
   -if user_org.is_suspended
-    -include "org_suspended_include.haml"
+    -include "org_suspended_include.html"
   -if messages
     -for msg in messages
       %temba-alert.mb-3
