Delete is only for deleting child workspaces

--- a/templates/orgs/org_sub_orgs.haml
+++ b/templates/orgs/org_sub_orgs.haml
@@ -59,7 +59,7 @@
     }
 
     function showDelete(id) {
-      showModax("{{_('Delete Workspace')|escapejs}}",  "/org/delete/" + id + "/");
+      showModax("{{_('Delete Workspace')|escapejs}}",  "/org/delete_child/" + id + "/");
     }
 
 -block table
