hide signup form if signups are disabled
Signed-off-by: Morris Mukiri <morrismukiri@gmail.com>

--- a/templates/public/public_index.haml
+++ b/templates/public/public_index.haml
@@ -46,6 +46,8 @@
         %h1.description
           {{ brand.description }}
 
+ # only show if allow signups
+  -if brand.allow_signups
     .row
       #lead-form
         %form{action:'{% ssl_brand_url "public.lead_create" %}', method:'POST'}
