Fix tickets list, to show compose properly on Firefox

--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -464,7 +464,7 @@
 
 -block content
 
-  .page.flex-grow.flex.flex-col.min-h-0
+  .page.flex-grow.flex.flex-col.min-h-0.max-h-screen
     .flex.ticket-ui
       %temba-resizer.flex.flex-row(-temba-resized="handleTicketListResized")
 
