Update contact search widget for flow starts

--- a/static/scss/tailwind.scss
+++ b/static/scss/tailwind.scss
@@ -966,4 +966,14 @@ code {
 
 }
 
+.filter {
+  @apply flex items-center text-sm mx-2;
+
+  temba-icon {
+    @apply mr-1;
+  }
+
+
+}
+
 @tailwind utilities;
