--- a/templates/contacts/contactimport_create.html
+++ b/templates/contacts/contactimport_create.html
@@ -1,9 +1,9 @@
 {% extends "smartmin/form.html" %}
 {% load smartmin i18n humanize sms %}
 
-{% block spa-title %}
-  {% trans "Import Contacts" %}
-{% endblock spa-title %}
+{% block title %}
+  {% trans "Import Contacts" %}s
+{% endblock title %}
 {% block content %}
   <div style="min-height:41px" class="flex mb-4 flex-col">
     {% blocktrans trimmed %}
