--- a/templates/orgs/org_sub_orgs.haml
+++ b/templates/orgs/org_sub_orgs.haml
@@ -2,11 +2,8 @@
 
 -load compress temba smartmin humanize
 -load i18n
--block page-title
-  -trans "Manage Workspaces"
-  \- {{user_org.name|capfirst}}
 
--block spa-title
+-block title
   #title-text
     -trans "Workspaces"
 
