--- a/templates/request_logs/httplog_read.haml
+++ b/templates/request_logs/httplog_read.haml
@@ -5,7 +5,7 @@
   HTTP Log - {{ object.get_log_type_display }}
 
 -block title
-  -block spa-title
+  -block title
     -if object.flow
       -trans "Flow Event"
     -elif object.classifier
