--- a/templates/channels/channellog_list.haml
+++ b/templates/channels/channellog_list.haml
@@ -1,7 +1,7 @@
 -extends "smartmin/list.html"
 -load i18n smartmin humanize temba
 
--block spa-title
+-block title
   -trans "Channel Logs"
 
 -block extra-style
