--- a/templates/flows/flow_editor.html
+++ b/templates/flows/flow_editor.html
@@ -1,7 +1,7 @@
 {% extends "smartmin/base.html" %}
 {% load compress temba i18n %}
 
-{% block spa-style %}
+{% block extra-style %}
   {{ block.super }}
   <style type="text/css">
     .spa-content {
@@ -95,7 +95,7 @@
       border: 1px solid transparent;
     }
   </style>
-{% endblock spa-style %}
+{% endblock extra-style %}
 {% block extra-script %}
   {{ block.super }}
   <script type="text/javascript">
@@ -217,9 +217,9 @@
     </div>
   {% endif %}
 {% endblock alert-messages %}
-{% block spa-title %}
+{% block title %}
   <div class="title-text flex">
-    <div class="inline-block flex items-center text-gray-600">
+    <div class="flex items-center text-gray-600">
       {% if object.flow_type == 'V' %}
         <temba-icon name="flow_ivr" class="mr-3">
         </temba-icon>
@@ -231,9 +231,9 @@
         </temba-icon>
       {% endif %}
     </div>
-    {{ title }}
+    <div id="title-text">{{ title }}</div>
   </div>
-{% endblock spa-title %}
+{% endblock title %}
 {% block content %}
   <temba-modax header="Send Message" id="send-message-modal">
   </temba-modax>
