--- a/templates/orgs/org_manage_accounts.haml
+++ b/templates/orgs/org_manage_accounts.haml
@@ -4,6 +4,10 @@
 -block title
   -trans "Manage Logins"
 
+-block subtitle
+  {{org.name|capfirst}}
+
+
 -block extra-style
   {{block.super}}
   :css
