--- a/templates/tickets/types/rocketchat/connect.html
+++ b/templates/tickets/types/rocketchat/connect.html
@@ -1,39 +1,51 @@
--extends "tickets/ticketer_connect_form.html"
--load i18n compress temba
+{% extends "tickets/ticketer_connect_form.html" %}
+{% load i18n compress temba %}
 
--block pre-form
-  -blocktrans trimmed with name=brand.name
-    You can connect Rocket.Chat to {{name}} in a few simple steps.
-
-  %ol.steps.card
-    %li
-      -blocktrans trimmed
+{% block pre-form %}
+  {% blocktrans trimmed with name=brand.name %}
+    You can connect Rocket.Chat to {{ name }} in a few simple steps.
+  {% endblocktrans %}
+  <ol class="steps card">
+    <li>
+      {% blocktrans trimmed %}
         In your Rocket.Chat instance, go to <i>Administration</i> &gt; <i>Omnichannel</i> and enable it.
-    %li
-      -blocktrans trimmed with brand=brand.name
+      {% endblocktrans %}
+    </li>
+    <li>
+      {% blocktrans trimmed with brand=brand.name %}
         Install the app <b>{{ brand }} Tickets</b> from the <i>Marketplace</i>.
-    %li
-      -blocktrans trimmed with brand=brand.name
+      {% endblocktrans %}
+    </li>
+    <li>
+      {% blocktrans trimmed with brand=brand.name %}
         Open the app details at <i>Administration</i> &gt; <i>Apps</i> &gt; <i>{{ brand }} Tickets</i>, and in
-        its settings section put the following token in the <i>App Secret</i> field: <div class="code">{{ secret }}</div>
-    %li
-      -blocktrans trimmed with brand=brand.name
+        its settings section put the following token in the <i>App Secret</i> field:
+        <div class="code">{{ secret }}</div>
+      {% endblocktrans %}
+    </li>
+    <li>
+      {% blocktrans trimmed with brand=brand.name %}
         Save the changes. Copy the app's URL and paste it in the URL field. It should end with a long ID,
         for example: https://my.rocket.chat/api/apps/public/51c5cebe-b8e4-48ae-89d3-2b7746019cc4
-    %li
-      -blocktrans trimmed
+      {% endblocktrans %}
+    </li>
+    <li>
+      {% blocktrans trimmed %}
         You will also need a Auth Token and User ID which you can generate at <i>Profile</i> &gt; <i>My account</i> &gt;
         <i>Personal Access Tokens</i>. Ensure that <i>Ignore Two Factor Authentication</i> is checked.
-
--block extra-script
+      {% endblocktrans %}
+    </li>
+  </ol>
+{% endblock pre-form %}
+{% block extra-script %}
   {{ block.super }}
-  :javascript
+  <script type="text/javascript">
     function processURI(input) {
       var value = input.val();
       if (value != null) {
         var uri = value.match(/https?:\/\/[^ "]+\/[0-9a-fA-F]{8}(?:\-[0-9a-fA-F]{4}){3}\-[0-9a-fA-F]{12}/);
         if (uri != null) {
-          if (value !== uri[0]){
+          if (value !== uri[0]) {
             input.val(uri[0]);
           }
           return uri[0];
@@ -53,3 +65,5 @@
         event.preventDefault();
       }
     });
+  </script>
+{% endblock extra-script %}
